styles/app.css
@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Luckiest Guy", cursive;
  color: #030c30;
}

main {
  margin-top: 1rem;
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  flex-direction: column;
}

#badge {
  position: relative;
  width: 364px;
  height: 520px;
  border-radius: 24px;
  background: url("../assets/images/template.png");
}

#prof {
  position: absolute;
  top: 56px;
  left: 50%;
  transform: translateX(-50%);
  width: 180px;
  height: 180px;
  background: url("../assets/images/nut.png");
  display: flex;
  align-items: center;
  justify-content: center;
}

#prof > img {
  width: 85%;
  height: 85%;
  object-fit: cover;
  border-radius: 50%;
}

#name {
  color: #ffffff;
  position: absolute;
  top: 276px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 48px;
  white-space: nowrap;
}

.input-div > * {
  gap: 0.5rem;
  width: 100%;
}

.input-div,
form {
  display: flex;
  flex-direction: column;
}

form {
  gap: 1rem;
  width: 100%;
  max-width: 400px;
}

form > div {
  display: flex;
  align-items: center;
  gap: 1rem;
}

#roles {
  width: 100%;
  padding-inline: 1rem;
  justify-content: center;
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  position: absolute;
  top: 336px;
  left: 50%;
  transform: translateX(-50%);
}

input[type="text"] {
  border: 2px solid #030c30;
}

input[type="text"],
button {
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
}

button {
  border: none;
  background: linear-gradient(45deg, #b3eb6c 0%, #069371 100%);
  cursor: pointer;
}

button:hover {
  box-shadow: 3px 4px 0 0px #030c30;
  transform: translate(-1px, -2px);
}
button:active {
  box-shadow: 1px 2px 0 0px #030c30;
  transform: translate(1px, 2px);
}

.source {
  position: fixed;
  top: -1px;
  right: -1px;
  z-index: 10;
}

.github path:nth-child(2) {
  -webkit-transform-origin: 130px 106px;
  transform-origin: 130px 106px;
}

.github:hover > path:nth-child(2) {
  animation: wave 0.56s ease-in-out;
}

@keyframes wave {
  0%,
  to {
    transform: rotate(0);
  }
  20%,
  60% {
    transform: rotate(-25deg);
  }
  40%,
  80% {
    transform: rotate(10deg);
  }
}

